fix: correct dashboard label mismatches and hallucinated values
- Move Block All Interruptions out of System Tools into Advanced Settings section
- Rename 'Disable Interruptions' to 'Block All Interruptions' (matches dashboard)
- Rename 'Keypad Input (DTMF)' to 'Press Digits (DTMF)' (matches dashboard)
- Fix DTMF field label: Description Override → Custom Instructions Override
- Fix warm transfer: Summary Prompt → Summary Instructions
- Fix warm transfer: Intro Message description (spoken after accept, heard by both)
- Fix webhook status values: sent/failed/skipped (not success/failed/timeout)
- Fix webhook config tab: Advanced not Overview
- Fix test panel references: sidebar panel not a tab
- Add webhook status enums to openapi.json Call schema

--- a/platform/inbound.mdx
+++ b/platform/inbound.mdx
@@ -179,9 +179,9 @@ Configure timeout behavior in the **Advanced** tab:
 
 ## Testing Inbound Calls
 
-### Using the Test Tab
+### Using the Test Panel
 
-1. Navigate to the **Test Agent** tab
+1. Open your agent and look at the **test panel** on the right
 2. Review the **Test Inbound Calls** banner showing your assigned numbers
 3. Call one of the listed numbers from your phone
 4. Watch the **Live Transcript** update in real-time as you speak with the agent
