--- a/platform/outbound.mdx
+++ b/platform/outbound.mdx
@@ -20,10 +20,10 @@ When you send an outbound call through RevRing:
 
 The dashboard provides an easy way to send test outbound calls and validate your agent configuration.
 
-### Using the Test Agent Tab
+### Using the Test Panel
 
 1. Navigate to [Agents](https://dashboard.revring.ai/app/agents) and select your agent
-2. Click the **Test Agent** tab
+2. Use the **test panel** on the right side of the page
 3. Configure the test call:
    - **Agent**: Pre-selected (your current agent)
    - **From Number**: Select a phone number from your SIP trunk
@@ -276,7 +276,7 @@ Monitor key metrics to optimize your outbound campaigns:
 
 Receive call results immediately after each call ends:
 
-1. Configure **Post-call Webhook URL** in the **Overview** tab:
+1. Configure **Post-call Webhook URL** in the **Advanced** tab:
    ```
    https://api.yourcompany.com/webhooks/post-call
    ```
