--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -95,11 +95,11 @@ Browse all 300+ available voices in the [Voice Library](https://dashboard.revrin
 
 ## Step 3: Test Your Agent
 
-The Test tab provides an easy way to send outbound test calls to your agent.
+The test panel on the right side of the agent page provides an easy way to send outbound test calls to your agent.
 
 ### Send a Test Call
 
-1. Navigate to the **Test Agent** tab
+1. Open your agent and use the **test panel** on the right
 2. In the **Test Configuration** card:
    - **Agent**: Already selected (your current agent)
    - **From Number**: Select one of your trunk's phone numbers
