--- a/platform/tools.mdx
+++ b/platform/tools.mdx
@@ -10,6 +10,10 @@ Tools enable your AI agents to take actions during phone calls beyond just conve
 
 System tools are pre-built capabilities that agents can invoke during calls. These tools are configured in the **Tools** tab of your agent settings.
 
+<Note>
+**Flow agents**: End Call, Transfer, and Press Digits are handled by dedicated [flow nodes](/platform/conversation-flows) instead of system tools. These three tools only appear on the Tools tab for single-prompt agents. Voicemail Detection and custom tools are available for both modes.
+</Note>
+
 ### End Call
 
 The End Call tool allows agents to automatically terminate calls based on configurable rules.
