fix: test panel is not inbound-only, supports any scenario via test variables

--- a/platform/outbound.mdx
+++ b/platform/outbound.mdx
@@ -38,9 +38,9 @@ Save frequently used configurations by entering a name and clicking **Save Confi
 
 ### Using the Test Panel
 
-The test panel on the right side of the agent page lets you call your agent directly from the browser via WebRTC. This is useful for quick iteration — you can tweak the prompt and immediately test without needing a phone.
+The test panel on the right side of the agent page lets you call your agent directly from the browser via WebRTC. This is useful for quick iteration — you can tweak the prompt and immediately test without needing a phone. Use **Test Variables** to set `direction`, `customer_name`, or any other variables your prompt expects.
 
-Note that test panel calls simulate **inbound** calls (you're calling the agent). To test outbound-specific behavior like first message delivery and caller ID, use the **Send Call** page instead.
+To test outbound calling over the phone network (with real caller ID and SIP routing), use the **Send Call** page instead.
 
 ## Sending Calls via API
 
