--- a/platform/webhooks.mdx
+++ b/platform/webhooks.mdx
@@ -567,8 +567,8 @@ curl -X POST http://localhost:3000/webhooks/pre-call \
 ### Test with Real Calls
 
 1. Configure your webhook URL in the **Advanced** tab
-2. For **pre-call webhooks**: use the **test panel** to make a browser call (simulates inbound) and check your server logs
-3. For **post-call webhooks**: use either the test panel or the [Send Call](https://dashboard.revring.ai/app/testing/send) page — post-call webhooks fire for both inbound and outbound calls
+2. For **pre-call webhooks**: use the **test panel** to make a browser call and check your server logs
+3. For **post-call webhooks**: use either the test panel or the [Send Call](https://dashboard.revring.ai/app/testing/send) page
 4. Check call details in [Call Logs](https://dashboard.revring.ai/app/calls) to verify webhook status
 
 ## Monitoring Webhooks
