fix: agent create form fields, Numbers tab label, webhook skipped status, sidebar label

--- a/platform/inbound.mdx
+++ b/platform/inbound.mdx
@@ -24,7 +24,7 @@ Before an agent can receive inbound calls, you must assign at least one phone nu
 
 1. Navigate to [Agents](https://dashboard.revring.ai/app/agents)
 2. Click on the agent you want to configure
-3. Select the **Phone Numbers** tab
+3. Select the **Numbers** tab
 
 ### Step 2: Add an Inbound Number
 
