--- a/platform/test-suites.mdx
+++ b/platform/test-suites.mdx
@@ -21,7 +21,7 @@ When you start a test run, RevRing places calls between the tester and target ag
 
 ### From the Dashboard
 
-1. Navigate to **Testing** in the sidebar
+1. Navigate to **Test Suites** in the sidebar
 2. Click **New Test Suite**
 3. Enter a **Name**
 4. Select the **Target Agent** to test
