--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -52,17 +52,16 @@ Agents are AI-powered voice assistants that handle phone conversations based on 
 
 1. Navigate to [Agents](https://dashboard.revring.ai/app/agents)
 2. Click **New Agent**
-3. Configure the basic settings:
-   - **Name**: `Sales Assistant` (or any descriptive name)
-   - **SIP Trunk**: Select the trunk you just created
+3. Enter a **Name** (e.g., `Sales Assistant`)
 4. Click **Create**
 
 ### Configure Agent Behavior
 
 After creation, you'll be taken to the agent detail page with several tabs. Configure the **Overview** tab:
 
-1. **Status**: Set to `Active` to enable the agent
-2. **First Message**: Enter an opening greeting (optional)
+1. **SIP Trunk**: Select the trunk you just created
+2. **Status**: Set to `Active` to enable the agent
+3. **First Message**: Enter an opening greeting (optional)
    ```
    Hello! Thanks for calling. How can I help you today?
    ```
